v3.3
bug fix - config